<resources>
    <string name="app_name">RiyadhMetroStations</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="dark_theme_preference_value">dark_theme</string>
    <string name="light_theme_preference_value">light_theme</string>
    <string name="system_theme_preference_value">system_theme</string>
    <string name="register">Register</string>
    <string name="retype_password">reType_password</string>
    <string name="confirm_password">confirm Password</string>
    <string name="login">logIn</string>
    <string name="plsEnterPass">Please Enter Password</string>
    <string name="plsEnterUserName">Please Enter User Name</string>
    <string name="plsRePass">Please re-Type the Password</string>
    <string name="logo">Logo</string>
    <string name="search_title">search_title</string>
    <string name="filter_title">filter_title</string>
    <string name="product_title">product_title</string>
    <string name="product_description">product_description</string>
    <string name="favorites">favorites</string>
    <string name="places">places</string>
    <string name="profile">profile</string>
    <string name="favorite">favorite</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_alarm_notification">AlarmNotification</string>
    <string name="rakan_aljarallah">Rakan Aljarallah</string>
    <string name="theme_preferences_key">theme_prefrecne</string>
    <string name="dark_theme_description">dark_theme_discription</string>
    <string name="light_theme_description">light_theme_discription</string>
    <string name="system_theme_description">system_theme_discription</string>
    <string name="thememode">themeMode</string>
    <string name="Email">The Email is not Valid</string>
    <string name="content_description_media">picture</string>
    <string name="title">Title</string>
    <string name="secondary_text">secondary</string>
    <string name="supporting_text">supporting</string>
    <string name="action_2">Go</string>
    <string name="action_1">Delete</string>
    <string name="sign_out">sign out</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="content_description_end_icon">edit user profile</string>
</resources>