<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/dropdown_menu"
        android:icon="@drawable/shr_menu"
        android:title="@string/sign_out"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="@string/search_title"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/option_get_place"
        android:icon="@drawable/ic_places"
        android:title="@string/option_get_place"
        app:showAsAction="ifRoom"
         />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="settings"
        app:showAsAction="ifRoom"
        />

</menu>