<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".user.ui.RegisterFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clickable="true"
                android:src="@drawable/ic_baseline_settings_24"
                android:layout_gravity="end"
                android:background="@color/material_on_primary_emphasis_medium"
                app:tint="@color/purple_700"
                android:contentDescription="@string/thememode" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/_f55253376942_removebg_preview"
                android:contentDescription="@string/logo" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/intro_animation"
                android:layout_marginTop="60dp"
                app:lottie_rawRes="@raw/trainanimation"
                app:lottie_autoPlay="true"
                app:lottie_loop="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_username_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColorHint="#A9000000"
                app:hintAnimationEnabled="true"
                app:errorTextAppearance="@string/plsEnterUserName"
                android:layout_marginTop="50dp"
                app:boxBackgroundColor="#EDEFED"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_username"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_password_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="40dp"
                app:errorEnabled="true"
                android:textColorHint="#A9000000"
                android:background="@color/white"
                app:passwordToggleEnabled="true"
                android:layout_marginStart="40dp"
                app:boxBackgroundColor="#EDEFED"
                android:layout_marginEnd="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_cnf_password_lay"
                android:layout_width="match_parent"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:textColorHint="#A9000000"
                android:background="@color/white"
                android:hint="@string/confirm_password"
                android:layout_marginTop="30dp"
                android:layout_marginStart="40dp"
                app:boxBackgroundColor="#EDEFED"
                android:layout_marginEnd="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_cnf_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:id="@+id/btn_lognin_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_singup_reg"
                    android:layout_width="121dp"
                    style="@style/Widget.Metro.Button"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="40dp"
                    android:layout_toStartOf="@id/btn_lognin_reg"
                    android:text="@string/register"
                    android:textStyle="bold"
                     />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
