<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <!-- region                     Error View Screen                -->
    <LinearLayout
         android:id="@+id/error_Screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
        android:visibility="gone"
         android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/loteError"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:lottie_rawRes="@raw/error"
             app:lottie_loop="true"
             app:lottie_autoPlay="true"
             app:lottie_repeatMode="restart"
             android:layout_marginVertical="@dimen/places_autocomplete_powered_by_google_height"
              />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rakan_aljarallah"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_below="@+id/loteError"
            />
        </RelativeLayout>
     </LinearLayout>
 <!-- endregion -->

    <!-- region                     Loading View Screen                -->

    <LinearLayout
        android:id="@+id/loading_Screen"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_rawRes="@raw/trainanimation"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:lottie_repeatMode="restart"
            android:layout_gravity="center"
            />


    </LinearLayout>
    <!-- endregion -->

    <!--region  Content View Screen                -->
<ScrollView
android:id="@+id/contentScreen"
android:layout_width="match_parent"
android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Primary_Green_500"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_settings_24" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            style="@style/Circular"
            android:src="@drawable/ic_profile" />

<!--        <EditText-->
<!--            android:id="@+id/profileName"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:layout_toEndOf="@id/profileImage"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold"-->
<!--            tools:hint="@string/rakan_aljarallah" />-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profileNamecard"
            android:layout_width="wrap_content"
            android:minWidth="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            style="@style/Base.CardView"
            android:layout_toEndOf="@id/profileImage"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/profileName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                tools:hint="Rakan Aljarallah" />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profileEmailcard"
            android:layout_width="wrap_content"
            android:layout_marginEnd="40dp"
            android:minWidth="30dp"
            style="@style/Base.CardView"
            android:layout_marginTop="6dp"

            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/profileImage"
            android:layout_below="@+id/profileNamecard"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/profileEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="rakna@gmail.com"
            android:textSize="14sp"
            android:textStyle="bold"
            />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profilePhonecard"
            android:layout_width="wrap_content"
            android:layout_marginEnd="40dp"
            android:minWidth="30dp"
            style="@style/Base.CardView"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:includeFontPadding="false"
            android:layout_toEndOf="@id/profileImage"
            android:layout_below="@id/profileEmailcard"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/profilePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:hint="0545595003" />

        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:gravity="center_horizontal"
            android:text="@string/cancel"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/save"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/save" />

    </RelativeLayout>
    </LinearLayout>
</ScrollView>
    <!-- endregion -->
</LinearLayout>
